# io_dev_tools_ros2

./: .gitignore  README.md
io_mocap/: CMakeLists.txt  README.md  package.xml
io_mocap/description/: blender_human.urdf  blender_human_exoskeleton.urdf  blender_human_skeleton.urdf  blender_human_skeleton_v2.urdf  blender_human_skeleton_v4.urdf
io_mocap/description/meshes/: L_base_link.STL  L_figer1_2.STL  L_figer1_3.STL  L_figer1_4.STL  L_figer2_1.STL  L_figer2_2.STL  L_figer2_3.STL  L_figer2_4.STL  L_figer3_2.STL  L_figer3_3.STL  L_figer3_4.STL  L_figer4_2.STL  L_figer4_4.STL  L_figer4_5.STL  L_figer5_1.STL  L_figer5_5.STL  L_mark.STL  Link1.STL  R_base_link.STL  R_figer1_1.STL  R_figer1_2.STL  R_figer1_3.STL  R_figer1_4.STL  R_figer1_5.STL  R_figer2_1.STL  R_figer2_2.STL  R_figer3_1.STL  R_figer3_2.STL  R_figer3_3.STL  R_figer3_4.STL  R_figer4_1.STL  R_figer4_2.STL  R_figer4_3.STL  R_figer5_1.STL  R_figer5_2.STL  R_figer5_3.STL  R_figer5_4.STL  R_figer5_5.STL  Rgamepadbase.STL
io_mocap/description/meshes/old/: Link1.STL  Link2.STL  base_link.STL
io_mocap/description/meshes/v2/: L_figer1_1.STL  L_figer1_2.STL  L_figer1_3.STL  L_figer1base.STL  L_figer2_2.STL  L_figer3_1.STL  L_figer4_1.STL  L_figer4_3.STL  L_figer4_4.STL  L_figer5_2.STL  L_figer5_3.STL  L_figer5_4.STL  L_markseat.STL  Lgamepadbase.STL  R_figer1_1.STL  R_figer1base.STL  R_figer2_3.STL  R_figer2_4.STL  R_figer3_1.STL  R_figer4_3.STL  R_figer4_4.STL  R_figer5_1.STL  R_figer5_3.STL  R_markseat.STL  r_figer1_1.STL
io_mocap/description/meshes/v4/: L_base_link.STL  L_figer1_1.STL  (+35 more)
io_mocap/launch/: exoskeleton_vis.launch.py  human_vis.launch.py
io_mocap/rviz/: rviz_config.rviz  rviz_config_skeleton.rviz
io_mocap/script/: pico_io_adapter_online.py  xsens_io_adapter_offline.py
io_robot/: CMakeLists.txt  README.md  package.xml
io_robot/config/DFQ_hand/: rviz.rviz  sim_ros.yml
io_robot/config/DualPiper/: sim_ros.yml
io_robot/config/G1/: rviz.rviz  sim_ros.yml
io_robot/config/OpenArm/: sim_ros.yml
io_robot/config/Xhand1/: rviz.rviz  sim_ros.yml
io_robot/launch/: robot_model.launch.py
io_robot/src/: robot_sim_bullet.py  robot_sim_ros2.py
(+3 files in other folders)
